Grammar/ITEJA_GRAMMAR.txt
 program = block "END."$;
 
 block = {"var" ident {"," ident} ";"} {statement};
 
 statement =
     ident "=" expression ";"
     | "func" function "(" func_parameters ")"
     | "if" condition "then" "{" {block} "}"
     | "while" condition "do" "{" {block} "}"
     | "for" expression "to" expression "do" "{" {block} "}";

 func_parameters = expression | ("up"|"down") | string;

 condition = expression ("!="|"=="|">="|"<="|"<"|">") expression;
 
 expression = ["+"|"-"] term {("+"|"-") term};
 
 term = factor {("*"|"/") factor};
 
 factor = (ident | number {number} | "(" expression ")" );
	 
 ident = /[a-z]+/ ;
 
 number = ("0"|"1"|"2"|"3"|"4"|"5"|"6"|"7"|"8"|"9");
 
 letter = ("A" | "B" | "C" | "D" | "E" | "F" | "G"
       | "H" | "I" | "J" | "K" | "L" | "M" | "N"
       | "O" | "P" | "Q" | "R" | "S" | "T" | "U"
       | "V" | "W" | "X" | "Y" | "Z" | "a" | "b"
       | "c" | "d" | "e" | "f" | "g" | "h" | "i"
       | "j" | "k" | "l" | "m" | "n" | "o" | "p"
       | "q" | "r" | "s" | "t" | "u" | "v" | "w"
       | "x" | "y" | "z") ;
	   
 symbol = ("[" | "]" | "{" | "}" | "(" | ")" | "<" | ">"
       | "'" | '"' | "=" | "|" | "." | "," | ";") ;
	   
 character = letter | number | symbol | "_" ;
 
 string = /\"(.*?)\"/ ;
 
 function = "forward"
	 | "backward"
	 | "angle"
	 | "pen"
	 | "write";
 
